Prepare for deb package

--- a/nrf24l01/DEBIAN/control
+++ b/nrf24l01/DEBIAN/control
@@ -2,7 +2,7 @@ Package: nrf24l01
 Version: 1.0
 Section: base
 Priority: optional
-Architecture: Raspberry Pi
+Architecture: armhf
 Depends: bash
 Maintainer: Vincent Demay
 Description: Handle nrf24l01 payload and send to internet
